# BEAR-OTA-LOADER

./: .cursorignore  .gitignore  APK_SIZE_OPTIMIZATION_REPORT.md  DEVELOPMENT.md  OTA_IMPLEMENTATION_SUMMARY.md  README.md  build-mundo.bat  build.bat  build.gradle.kts  build.sh  create_simple_bg.html  gradle.properties  library_versions.json  settings.gradle.kts  test_phase7_bearmod_integration.bat  test_phase7_integration.bat
.cursor/rules/: android-permissions.mdc  bearmod-permissions.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-protection.yml  build.yml  pr-automation.yml
Plugin/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
Plugin/src/main/: AndroidManifest.xml
Plugin/src/main/res/drawable/: app_logo.xml  bg_status.xml  elevated_card_background.xml  frosted_glass_background.xml  ic_app_icon.xml  ic_clear_cache.xml  ic_dashboard.xml  ic_download.xml  ic_empty.xml  ic_logout.xml  ic_reset.xml  ic_security.xml  ic_security_24.xml  ic_settings.xml  premium_card_gradient.xml  splash_background.xml  splash_gradient.xml
Plugin/src/main/res/font/: roboto.xml
Plugin/src/main/res/layout/: item_patch.xml  (+10 more)
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: game.json  items.json
app/src/main/cpp/: Android.mk  ESP.h  MENU.h  SDK.hpp  SKIN.h  bearmod_jni.cpp  injection.cpp  main.cpp  security_verifier.cpp
docs/: APP_MODULE_CLEANUP_IMPLEMENTATION_PLAN.md  CODEBASE_CLEANUP_REPORT.md  CRITICAL_IMPLEMENTATION_FIXES_REPORT.md  CRITICAL_STATE_MANAGEMENT_FIX_REPORT.md  DEPLOYMENT_READINESS_CHECKLIST.md  FRIDA_INTEGRATION_GUIDE.md  FRIDA_SCRIPT_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  KEYAUTH_IMPLEMENTATION.md  LIBBEARMOD_INTEGRATION_SETUP.md  OTA_SYSTEM_DEMONSTRATION.md  OTA_VERIFICATION_REPORT.md  PHASE_6_AUDIT_REPORT.md  PHASE_7_BEARMOD_INTEGRATION_REPORT.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_7_INTEGRATION_REPORT.md  PHASE_7_PERMISSION_SYSTEM_IMPLEMENTATION_REPORT.md  PHASE_7_RUNTIME_INJECTION_IMPLEMENTATION_REPORT.md  PHASE_7_SIGNATUREVERIFIER_IMPLEMENTATION_REPORT.md  PHASE_7_TESTING_PLAN.md  PHASE_7_UI_MODERNIZATION_REPORT.md  PROJECT_UPDATES_CONFIGURATION.md  PUBG_PACKAGE_AUDIT_REPORT.md  SCRIPT_CONSOLIDATION_REPORT.md  STREAMLINED_PERMISSION_SYSTEM_IMPLEMENTATION_REPORT.md  STREAMLINED_PERMISSION_USAGE_EXAMPLES.md  TESTING_PROTOCOL_BEARMOD_LOADER.md  TODO_MANAGEMENT_PROCESS.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mundo_core/: build.gradle.kts
mundo_core/src/main/assets/: script_manifest.json
mundo_core/src/main/cpp/: Android.mk  CMakeLists.txt
mundo_core/src/main/cpp/api/: mundo_api.cpp
mundo_core/src/main/cpp/auth/: auth_validator.cpp
mundo_core/src/main/cpp/core/: mundo_core.cpp
mundo_core/src/main/cpp/include/: auth_validator.h  frida_integration.h  mundo_api.h  mundo_internal.h  stealth_manager.h
mundo_core/src/main/cpp/integration/: antihook_bridge.cpp  antihook_bridge.h  frida_integration.cpp  keyauth_bridge.cpp  keyauth_bridge.h
mundo_core/src/main/cpp/jni/: mundo_jni_bridge.cpp
mundo_core/src/main/cpp/nonroot/: nonroot_manager.cpp
mundo_core/src/main/cpp/security/: security_manager.cpp
mundo_core/src/main/cpp/stealth/: stealth_manager.cpp
mundo_core/src/main/cpp/utils/: mundo_utils.cpp
script/: config.js
script/frida/: frida_launcher.py
script/nonroot/: gadget_manager.js  injection_controller.js
script/patches/analyzer/: script.js
script/patches/bypass-signkill/: script.js
script/payloads/: bearmod_base.js  bearmod_global.js  bearmod_korea.js  bearmod_taiwan.js  bearmod_vietnam.js
test/: BearModTestMatrix.java  run_comprehensive_tests.sh
(+1595 files in other folders)
